Added README description for project.